--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <tomcat.version>8.5.51</tomcat.version>
+    <tomcat.version>10.1.0-M14</tomcat.version>
     <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -18,7 +18,7 @@
     <dependency>
           <groupId>com.google.code.gson</groupId>
           <artifactId>gson</artifactId>
-          <version>2.8.5</version>
+          <version>2.9.0</version>
       </dependency>
     <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
@@ -48,12 +48,12 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.2.1</version>
+      <version>42.3.3</version>
     </dependency>
     <dependency>
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
-        <version>1.13.1</version>
+        <version>1.14.3</version>
     </dependency>
   </dependencies>
   <build>
